[package]
name = "elevate"
version = "0.3.0"
authors = ["Starz0r <starz0rdesign@gmail.com>"]

[dependencies]
winapi = { version = "0.3.4", features = ["winnt", "minwindef", "winbase", "processthreadsapi", "processenv", "errhandlingapi"] }
winutil = "0.1.1"

[features]
default = ["std"]
std = ["winapi/std"]

[patch.crates-io]
winapi = { path = "E:/temp/Projects/Unfinished/winapi-rs" }