[package]
name = "elevate"
version = "0.9.0"
authors = ["Starz0r <starz0r@starz0r.com>"]

[dependencies]
winapi = { version = "0.3.4", features = ["shellapi", "winbase", "synchapi", "wincon", "securitybaseapi", "processthreadsapi", "winnt", "winuser"] }

[features]
default = ["std"]
std = ["winapi/std"]
